--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tracker Donaciones Pocket Ants v1.3.5</title>
+    <title>Tracker Donaciones Pocket Ants v1.3.6</title>
     <link rel="manifest" href="manifest.json">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -1144,7 +1144,7 @@
             <div class="header-subtitle" id="headerLastUpdate">
                 Última actualización: Cargando...
             </div>
-            <div class="version-tag">v1.3.5</div>
+            <div class="version-tag">v1.3.6</div>
         </div>
 
         <!-- Botones de acción -->
@@ -2654,18 +2654,74 @@
         // Función updatePlayers obsoleta eliminada (estaba duplicada)
 
 
-        async function startNewWeek() {
+        async function startNewWeek(presentNames = []) {
             if (!auth.currentUser) return;
 
             const weeklyGoal = goalDaily * 7;
             const updates = {};
+            const presentSet = new Set(presentNames.map(n => n.toLowerCase()));
 
-            // ELIMINAR todos los baneados de semana anterior al iniciar nueva semana
+            // MARCAR AUSENTES: Los que NO están en la lista nueva de datos
+            Object.keys(players).forEach(name => {
+                if (!presentSet.has(name.toLowerCase())) {
+                    players[name].absent = true;  // Marcar como baneado
+                }
+            });
+
+            Object.keys(players).forEach(name => {
+                const player = players[name];
+
+                // Si está baneado, solo mostrar (no calcular nada)
+                if (player.absent) return;
+
+                // LÓGICA CRÍTICA: JUGADORES NUEVOS (Modo Referencia)
+                if (player.isNew) {
+                    // Simplemente "oficializamos" su entrada.
+                    // Su 'current' se convierte en el 'previous' de la siguiente semana.
+                    // NO calculamos deuda ni exceso ni total esta vez.
+                    player.previous = player.current || 0;
+                    player.isNew = false; // Ya no es nuevo para la próxima
+                } else {
+                    // LÓGICA ESTÁNDAR (Jugadores Activos)
+                    const previous = player.previous || 0;
+                    const current = player.current || 0;
+                    const weeklyDonation = current - previous;
+
+                    // ACTUALIZAR TOTAL histórico
+                    player.total = (player.total || 0) + weeklyDonation;
+
+                    // Calcular Exceso o Déficit
+                    if (weeklyDonation >= weeklyGoal) {
+                        // Superávit: Se suma al acumulado
+                        const surplus = weeklyDonation - weeklyGoal;
+                        player.accumulatedExcess = (player.accumulatedExcess || 0) + surplus;
+                    } else {
+                        // Déficit: Se descuenta del acumulado
+                        const deficit = weeklyGoal - weeklyDonation;
+                        const availableExcess = Math.max(0, player.accumulatedExcess || 0);
+                        const amountToDeduct = Math.min(deficit, availableExcess);
+
+                        // Restamos lo que se pudo cubrir
+                        player.accumulatedExcess = availableExcess - amountToDeduct;
+                    }
+
+                    // AVANZAR SEMANA: El 'current' actual es el 'previous' de la siguiente.
+                    player.previous = current;
+                }
+            });
+
+            // ELIMINAR BANEADOS AL FINAL (ya se mostraron esta semana como "❌ Baneado")
             const bannedPlayers = Object.keys(players).filter(name => players[name].absent);
             bannedPlayers.forEach(name => delete players[name]);
             if (bannedPlayers.length > 0) {
                 showStatus(`🗑️ ${bannedPlayers.length} baneados eliminados del sistema.`, 'info');
             }
+
+            weekStart = Date.now(); // Guardar timestamp real de inicio
+            showUnsavedIndicator();
+            renderTable();
+            showStatus('🔄 Nueva semana iniciada. Los "Nuevos" ahora son activos.', 'success');
+        }
 
             Object.keys(players).forEach(name => {
                 const player = players[name];
@@ -3628,6 +3684,19 @@
             // Verificar si hay datos manuales pendientes (Vista Previa activa)
             const manualText = document.getElementById('manualInput').value.trim();
             let pendingDataProcessed = false;
+            let presentNames = [];  // Nombres presentes en la lista manual
+
+            // Extraer nombres del texto manual ANTES de procesar
+            if (manualText) {
+                const lines = manualText.split('\n');
+                lines.forEach(line => {
+                    const parts = line.split(',');
+                    if (parts.length >= 1) {
+                        const name = parts[0].trim();
+                        if (name) presentNames.push(name);
+                    }
+                });
+            }
 
             if (manualText && mode === 'NEW_WEEK') {
                 if (confirm('📝 Hay datos manuales en la vista previa. ¿Quieres usarlos para cerrar la semana?\n(Si dices Cancelar, se ignorarán y se usará solo lo que ya estaba guardado)')) {
@@ -3668,7 +3737,10 @@
                 if (!confirm(msg)) {
                     return;
                 }
-                await startNewWeek();
+                
+                // Si hay datos manuales pendientes, usar esos nombres; si no, usar players actuales
+                const namesToUse = pendingDataProcessed ? presentNames : Object.keys(players);
+                await startNewWeek(namesToUse);
                 await saveData(); // Guardar los cambios post-cierre
                 document.getElementById('manualSection').classList.remove('active'); // Ocultar panel manual si estaba abierto
 
